fixed layout shift of the header

--- a/scss/layout/_cart_page.scss
+++ b/scss/layout/_cart_page.scss
@@ -24,6 +24,7 @@
       max-width: 23rem;
       color: gray;
       font-size: 1rem;
+      font-family: $font;
 
       &__bold {
         font-weight: 700;
