--- a/scss/layout/_header.scss
+++ b/scss/layout/_header.scss
@@ -16,6 +16,7 @@
     display: flex;
     align-items: center;
     justify-content: space-between;
+    height: 4.3875rem;
     
     background-color: var(--nav-white-color);
     border-bottom: 1px solid var(--light-gray-color);
